php-src/tests/classes/constants_visibility_error_003.out
Failed loading /opt/php-7.1/lib/php/extensions/debug-non-zts-20160303/xdebug.so:  /opt/php-7.1/lib/php/extensions/debug-non-zts-20160303/xdebug.so: cannot open shared object file: No such file or directory

Fatal error: Access level to B::publicConst must be public (as in class A) in /root/php-src/tests/classes/constants_visibility_error_003.php on line 9